# oonidata-bench

./: Readme.md  bench.sh  bench_go.go  bench_go_goccy.go  bench_python.py  dataformat_dacite.py  dataformat_mashumaro.py  dataformat_pydantic.py  go.mod  make_go_struct.py  pyproject.toml
